--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ img {
   bottom: 0%;
   z-index: -1;
   opacity: 0.2;
+  border-radius: 0 50px 50px 0;
 }
 
 .slider-images .image .left-side {
@@ -100,6 +101,7 @@ img {
   bottom: 0%;
   z-index: -1;
   opacity: 0.2;
+  border-radius: 50px 0 0 50px;
 }
 
 /* -------------------- */
