--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,12 @@
 img {
   width: 100%;
   height: auto;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  pointer-events: none;
 }
 
 /* -------------------- */
@@ -31,10 +37,22 @@ img {
 .slider-images {
   padding: 5%;
   position: relative;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  pointer-events: none;
 }
 
 .slider-images .image {
   position: relative;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  pointer-events: none;
 }
 
 .slider-images .image img {
@@ -45,6 +63,12 @@ img {
   display: block;
   height: 500px;
   object-fit: cover;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  pointer-events: none;
 }
 
 .arrow i {
